force-app/main/default/objects/Historical_Membership__c/Historical_Membership__c.object-meta.xml
<CustomObject>
    <label>Historical Membership</label>
    <nameField>
        <displayFormat>HM-{00000}</displayFormat>
        <label>Historical Membership Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Historical Memberships</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>