force-app/main/default/objects/Historical_Membership__c/fields/Course_Id__c.field-meta.xml
<CustomField>
    <fullName>Course_Id__c</fullName>
    <label>Course Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>