force-app/main/default/objects/Historical_Membership__c/fields/End_Date_Formula__c.field-meta.xml
<CustomField>
    <fullName>End_Date_Formula__c</fullName>
    <formula>IF(
  NOT(ISBLANK(Cancelled_Date__c)),
  Cancelled_Date__c,
  IF(
    NOT(ISBLANK(End_Date__c)),
    End_Date__c,
    IF(
      NOT(ISBLANK(Start_Date__c)),
      Start_Date__c + 365,
      NULL
    )
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>End Date Formula</label>
    <type>Date</type>
</CustomField>