force-app/main/default/objects/Historical_Membership__c/fields/Individual_Membership_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Individual_Membership_Assignment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Individual Membership Assignment</label>
    <referenceTo>Account_Membership__c</referenceTo>
    <relationshipLabel>Historical Memberships</relationshipLabel>
    <relationshipName>Historical_Memberships</relationshipName>
    <type>Lookup</type>
</CustomField>