force-app/main/default/objects/Historical_Membership__c/fields/Post_Parent__c.field-meta.xml
<CustomField>
    <fullName>Post_Parent__c</fullName>
    <label>Post Parent</label>
    <length>255</length>
    <type>Text</type>
</CustomField>