force-app/main/default/objects/Historical_Membership__c/fields/Successful_Insert__c.field-meta.xml
<CustomField>
    <fullName>Successful_Insert__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Successful Insert</label>
    <type>Checkbox</type>
</CustomField>