force-app/main/default/objects/Historical_Membership__c/fields/User_Membership_Date__c.field-meta.xml
<CustomField>
    <fullName>User_Membership_Date__c</fullName>
    <label>User Membership Date</label>
    <type>Date</type>
</CustomField>