force-app/main/default/objects/Historical_Membership__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Historical_Order_Id__c</columns>
    <columns>Product_Id__c</columns>
    <columns>User_Email__c</columns>
    <columns>Successful_Insert__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>